modify getTasks request
